--- a/hw2-windows/hw2-windows/hw2-windows.vcxproj
+++ b/hw2-windows/hw2-windows/hw2-windows.vcxproj
@@ -73,16 +73,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="display.cpp" />
-    <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="primitive.cpp" />
     <ClCompile Include="readfile.cpp" />
-    <ClCompile Include="shaders.cpp" />
     <ClCompile Include="Transform.cpp" />
-    <ClCompile Include="UCSD\grader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="primitive.h" />
     <ClInclude Include="readfile.h" />
     <ClInclude Include="shaders.h" />
     <ClInclude Include="Transform.h" />
