Sampler/Film added
Added Sampler and Film. Sampler is mostly done. Film is confusing.

--- a/hw2-windows/hw2-windows/hw2-windows.vcxproj
+++ b/hw2-windows/hw2-windows/hw2-windows.vcxproj
@@ -76,6 +76,7 @@
     <ClCompile Include="raytracer.cpp" />
     <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="scene.cpp" />
+    <ClCompile Include="Film.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
