--- a/hw2-windows/hw2-windows/hw2-windows.vcxproj.filters
+++ b/hw2-windows/hw2-windows/hw2-windows.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Sampler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Film.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="readfile.h">
