--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,16 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+hw2-windows/.vs/hw2-windows/v17/ipch/AutoPCH/179223aefa0f0348/RAYTRACER.ipch
+hw2-windows.zip
+hw2-windows/.vs/hw2-windows/v17/ipch/AutoPCH/179223aefa0f0348/RAYTRACER.ipch
+hw2-windows/hw2-windows/Debug/vc143.pdb
+hw2-windows/hw2-windows/Debug/vc143.idb
+hw2-windows/hw2-windows/Debug/scene.obj
+hw2-windows/hw2-windows/Debug/raytracer.obj
+hw2-windows/hw2-windows/Debug/hw2-windows.tlog/link.read.1.tlog
+hw2-windows/hw2-windows/Debug/hw2-windows.tlog/CL.read.1.tlog
+hw2-windows/hw2-windows/Debug/hw2-windows.log
+hw2-windows/hw2-windows/Debug/hw2-windows.ilk
+hw2-windows/.vs/hw2-windows/v17/ipch/AutoPCH/258dee3f603b6ea5/SAMPLER.ipch
+hw2-windows/.vs/hw2-windows/v17/ipch/AutoPCH/179223aefa0f0348/RAYTRACER.ipch
